--- a/package.json
+++ b/package.json
@@ -47,8 +47,7 @@
     "rimraf": "^3.0.2",
     "ts-jest": "^27.0.5",
     "ts-node": "^10.2.1",
-    "typescript": "^4.4.3",
-    "typesync": "^0.8.0"
+    "typescript": "^4.4.3"
   },
   "publishConfig": {
     "registry": "https://registry.npmjs.org/",
